--- a/app/css/index.css
+++ b/app/css/index.css
@@ -1,4 +1,4 @@
-.header{ width: 100%; height: 4.5rem; line-height: 4.5rem; padding: 0 1rem; box-sizing: border-box; background:#FFFFFF url(../img/a002.png) repeat-x bottom; text-align: center; position: absolute; left:0; top: 0; z-index: 10;} 
+.header{ width: 100%; height: 4.5rem; line-height: 4.5rem; padding: 0 1rem; box-sizing: border-box; background:#FFFFFF url(../img/a002.png) repeat-x bottom; text-align: center; position: fixed; left:0; top: 0; z-index: 10;} 
 .header img{ height: 2rem; width: 1rem;}
 .header .icon{ display: inline-block; width: 5rem; height: 1rem; position: absolute;padding: 0.5rem 0 0 1rem;left: 0; top: 0px;} 
 .header span{  font-size: 1.8rem; line-height: 4rem;  }
@@ -10,7 +10,7 @@ input{ width: 100%;}
 .register{ font-size: 1.3rem; float: right; color: #1B8BD7; display: inline-block;}
 .loginbox{ padding:7.1rem 1rem 0; }
 .loginboxin{ border-radius: 10px; background: #ffffff; padding: 0 1.6rem;}
- input[type='text'], input[type='tel'],input[type='password']{display: block;  font-size: 1.2rem;   height: 5.6rem;border:none; }
+ input[type='text'], input[type='tel'],input[type='password']{display: block;  font-size: 1.2rem;   height: 5.6rem;border:none; line-height: 5.6rem; }
 .usename{  background:#FFFFFF url(../img/a003_r1_c1.png) no-repeat left center; padding-left: 4rem; box-sizing: border-box; background-size: 2rem 2rem;}
 .password{background: url(../img/a003_r3_c2.png) no-repeat left center; padding-left: 4rem; box-sizing: border-box; background-size: 2rem 2rem;}
 
@@ -67,10 +67,19 @@ input{ width: 100%;}
 
 /* 左边的导航*/
 .leftnav{ width:50%; position: absolute; height: 100%; left: -50%; top: 0; }
-.leftnav h2{  height: 8.5rem;  padding: 2.2rem 0 0 2rem;}
+.leftnav h2{  height: 8.5rem;  padding: 2.2rem 0 0 1rem;}
 .txiang{ height: 5.3rem; line-height: 5.3rem; font-size: 1.6rem;}
 .txiang img{ height: 100%; width: auto; float: left; margin-right:10%;}
 .txiang a{ color: #000000;}
 .leftnav ul{ padding: 3rem 0 0 2.3rem;}
 .leftnav ul li{ height: 2rem; line-height: 2rem; font-size: 1.6rem; margin-bottom: 3rem;}
 .leftnav ul li img{ height: 100%; float: left; width: auto; margin-right: 1.6rem;}
+
+
+
+/*首页类型的头部样式*/
+.iheader{ height: 4.8rem;  background: #FFFFFF; overflow: hidden;}
+.iheader a.icon{ position: absolute; left: 2.5rem; top:1.2rem;}
+.iheader a img{ height:2.1rem; width: auto ;}
+.iheader .banner{  margin: 1.3rem auto 0;  display:block; height: 2.1rem; width: auto;}
+/*index页面*/
