添加了两个页面  有个页面未完成

--- a/app/css/common.css
+++ b/app/css/common.css
@@ -61,3 +61,7 @@ html{font-size:62.5%; -webkit-text-size-adjust: none;}
 body{font-size:1.2rem; background:#f4f4f4; color:#666;}
 .bttom{ height: 20px;}
 .ng-cloak{ display: none;}
+
+
+/*color*/
+.color10{color: #c9c8ce;}
