看一下bootstrap 的源码,学习一下

--- a/bootstrap-sass-3.3.5/assets/stylesheets/bootstrap/mixins/_grid.scss
+++ b/bootstrap-sass-3.3.5/assets/stylesheets/bootstrap/mixins/_grid.scss
@@ -3,6 +3,11 @@
 // Generate semantic grid columns with these mixins.
 
 // Centered container element
+
+/*
+*学习笔记 测试 bootstrap 0825
+*1.percentage 是可以将一个值转换到有一个百分号；
+*/
 @mixin container-fixed($gutter: $grid-gutter-width) {
   margin-right: auto;
   margin-left: auto;
